--- a/blog/bootstrap_template/templates/blog/post_detail.html
+++ b/blog/bootstrap_template/templates/blog/post_detail.html
@@ -6,4 +6,14 @@
 {% block body %}
   <h1>{{ object.title }}</h1>
   {{ object.body|markdown }}
+
+  <p><strong>{% trans "Categories" %}:</strong></p>
+  {% for category in object.categories.all %}
+    <ul class="breadcrumb">
+      {% for ancestor in category.get_ancestors %}
+        <li><a href="{{ ancestor.get_absolute_url }}">{{ ancestor }}</a></li>
+      {% endfor %}
+      <li><a href="{{ category.get_absolute_url }}">{{ category }}</a></li>
+    </ul>
+  {% endfor %}
 {% endblock %}
